Hour 3: debug circle reflections, add in sight rays

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@mathigon/boost": "^1.2.31",
+    "@mathigon/core": "^1.1.23",
     "@mathigon/euclid": "^1.2.4",
     "@mathigon/fermat": "^1.1.24"
   }
